[gd_scene load_steps=7 format=3 uid="uid://bgpsmmld5orxv"]

[ext_resource type="Theme" uid="uid://clefja284aktg" path="res://code/ui/menu/default_theme.tres" id="1_glqfj"]
[ext_resource type="Script" path="res://code/ui/menu/pause_menu.gd" id="2_xdudt"]

[sub_resource type="EventAsset" id="EventAsset_x0ni4"]
is_oneshot = true
min_distance = 1.0
max_distance = 20.0
path = "event:/UI/Pause"
guid = "{9c7ece2e-7c4a-4ade-b985-fdbc4f9da204}"
name = "Pause"

[sub_resource type="EventAsset" id="EventAsset_26tpe"]
is_oneshot = true
min_distance = 1.0
max_distance = 20.0
path = "event:/UI/Unpause"
guid = "{954650f4-edfb-41e2-8818-42437037af56}"
name = "Unpause"

[sub_resource type="EventAsset" id="EventAsset_qi1k5"]
is_oneshot = true
min_distance = 1.0
max_distance = 20.0
path = "event:/UI/Select"
guid = "{43d191c0-e538-480e-b59c-454ca2c830e1}"
name = "Select"

[sub_resource type="EventAsset" id="EventAsset_iam1g"]
is_oneshot = true
min_distance = 1.0
max_distance = 20.0
path = "event:/UI/Confirm"
guid = "{1e9a621e-e9d4-4ddf-8701-b1e42a6e0417}"
name = "Confirm"

[node name="PauseMenu" type="PanelContainer"]
modulate = Color(1, 1, 1, 0.8)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -175.0
offset_right = 136.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_glqfj")
script = ExtResource("2_xdudt")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Restart"

[node name="Settings" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[node name="PauseSound" type="StudioEventEmitter2D" parent="."]
event = SubResource("EventAsset_x0ni4")

[node name="UnpauseSound" type="StudioEventEmitter2D" parent="."]
event = SubResource("EventAsset_26tpe")

[node name="SelectSound" type="StudioEventEmitter2D" parent="."]
event = SubResource("EventAsset_qi1k5")

[node name="ConfirmSound" type="StudioEventEmitter2D" parent="."]
event = SubResource("EventAsset_iam1g")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Margin/VBox/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Margin/VBox/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Margin/VBox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Margin/VBox/Exit" to="." method="_on_exit_pressed"]
